--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -4,55 +4,16 @@
   font-size: 2em;
 }
 
-.folders {
-
+.videos {
   list-style: none;
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 3em;
-
-  li {
-
-    border: solid 2px gray;
-
-    &:hover,
-    &[data-active-folder="true"] {
-      border-color: blueviolet;
-    }
-
-  }
-
-  button {
-    display: block;
-    width: 100%;
-    padding: 1em;
-    background: white;
-    border: none;
-    cursor: pointer;
-  }
-
-}
-
-.images {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: 1fr 1fr;
   grid-gap: 3em;
 }
 
-.imageTitle {
+.videoTitle {
   font-size: 1.4em;
   margin: .4em 0 0;
-}
-
-.imageImage {
-
-  & > div {
-    display: block!important;
-  }
-
 }
